# efb-telegram-master

./: .gitignore  pyproject.toml
docs/superpowers/plans/: 2026-07-17-chat-delivery-filter.md  2026-07-18-filter-overview.md
docs/superpowers/specs/: 2026-07-17-chat-delivery-filter-design.md  2026-07-18-filter-overview-design.md
efb_telegram_master/: __init__.py  bot_manager.py  chat_title_sync.py  cleanup.py  commands.py  db.py  delivery_policy.py  delivery_policy_ui.py  delivery_telemetry.py  file_size_policy.py  locale_handler.py  master_message.py  operations_ui.py  slave_message.py  utils.py  watchdog_control.py  wizard.py
efb_telegram_master/locale/zh_CN/LC_MESSAGES/: efb_telegram_master.mo
tests/: test_cleanup.py  test_watchdog_control.py
tests/unit/: test_bot_manager.py  test_chat_title_sync.py  test_delivery_policy.py  test_delivery_policy_ui.py  test_delivery_telemetry.py  test_file_size_policy.py  test_operations_ui.py  test_slave_message.py
